# lqobjectserializer

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  lcserializer.cpp  lcserializer.h  lserializer.cpp  main.cpp
LQObjectSerializer/: CMakeLists.txt  lserializer.cpp  lserializer.h  main.cpp
LQObjectSerializerTest/: CMakeLists.txt  CMakeLists_qt6.txt  json_3.json  json_4.json  json_5.json  json_6.json  res.qrc  tst_githubtestcase.cpp  tst_lqobjectserializertest.cpp
LQObjectSerializerTest/qt5/: CMakeLists.txt
LQObjectSerializerTest/qt6/: CMakeLists.txt
